<resources>
    <string name="app_name">Vippie</string>
    <string name="settings_title">Settings</string>
    <string name="call_state_dialing">Dialing...</string>
    <string name="call_state_ringing">Ringing</string>
    <string name="call_state_disconnected">Disconnected</string>
    <string name="call_state_failed">Failed</string>
    <string name="call_state_conference">Conference</string>
    <string name="call_waitng_for_remote_video_text">Waiting for remote video...</string>
    <string name="account_registered">Online</string>
    <string name="account_trying_register">Connecting</string>
    <string name="account_not_registered">Offline</string>
    <string name="account_activation_required">Activation required</string>
    <string name="account_activation_sms_received">Activation code SMS received</string>
    <string name="account_activation_sms_obtained">Activation code obtained from inbox</string>
    <string name="remote_video_offer_title_text">Enable video</string>
    <string name="calling_video_offer_text">Remote party invites you to have a video conversation, would you like to accept it?</string>
    <string name="menu_quit">Exit</string>
    <string name="menu_view">View</string>
    <string name="menu_delete_all">Delete All</string>
    <string name="menu_total_duration">Total Duration</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_add_xmpp_contact">Add XMPP Contact</string>
    <string name="menu_filter">Filter</string>
    <string name="menu_add_to_phonebook">Add to phone book</string>
    <string name="menu_create_new_contact">Create new contact</string>
    <string name="menu_choose_existing_contact">Choose existing contact</string>
    <string name="menu_details">Details</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_call">Call</string>
    <string name="menu_message">Message</string>
    <string name="menu_send_msg">Send Message</string>
    <string name="menu_new_msg">New Message</string>
    <string name="menu_resend">Resend</string>
    <string name="menu_copy_to_clipboard">Copy to clipboard</string>
    <string name="menu_checkrate">Check rate</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_deselect_all">Deselect all</string>
    <string name="hide_dialpad_text">Hide keypad</string>
    <string name="dialpad_rate_suffix">/min</string>
    <string name="contact_name_default">(Unknown)</string>
    <string name="calllog_title">Call log</string>
    <string name="calllog_view">Select view</string>
    <string name="calllog_view_all">All</string>
    <string name="calllog_view_incoming">Incoming</string>
    <string name="calllog_view_outgoing">Outgoing</string>
    <string name="calllog_view_missed">Missed</string>
    <string name="calllog_total_duration">Total duration</string>
    <string name="calllog_confimr_delete_all">Are you sure you want to clear call log?</string>
    <string name="calllog_empty_list">No entries</string>
    <string name="contacts_title">Contacts</string>
    <string name="contacts_search_hint">Type to search</string>
    <string name="contacts_enter_sip_uri_hint">Enter number</string>
    <string name="messages_empty_list">start a chat</string>
    <string name="messages_unsupported_operation">Unsupported operation, please update the application</string>
    <string name="message_compose_hint">Tap to compose</string>
    <string name="message_typing">typing</string>
    <string name="message_not_vippie">It\'s not a %s number, attachments can not be send.</string>
    <string name="message_notification_ticked">New message received</string>
    <string name="message_notification_title">From</string>
    <string name="voicemail_notification_title">Voicemail</string>
    <string name="voicemail_notification_text">You have %d new messages</string>
    <string name="voicemail_notification_ticked">New voicemail messages</string>
    <string name="message_att_not_allowed">Not allowed during call</string>
    <string name="http_connection_failed">Problem with connection to destination</string>
    <string name="recharge_title">Top Up</string>
    <string name="recharge_entry_text">Top Up</string>
    <string name="recharge_description">Make calls at extremely cheap international rates to contacts who do not have the app. Add credit directly from your %1$s account</string>
    <string name="account_title">Account</string>
    <string name="account_plans">Plans</string>
    <string name="account_numbers">Numbers</string>
    <string name="billing_missing_transaction_id">Cannot acquire transaction ID from server</string>
    <string name="billing_problems_with_recharge">Problems with recharging account</string>
    <string name="billing_not_supported_title">Can\'t make purchases</string>
    <string name="billing_not_supported_message">The payments\nservice is not available at this time.  You can continue to use this app but you\nwon\'t be able to make purchases.</string>
    <string name="billing_cannot_connect_title">Can\'t connect to payments service</string>
    <string name="billing_cannot_connect_message">This app cannot connect to payments service.\nYour version of %1$s may be out of date.\nYou can continue to use this app but you\nwon\'t be able to make purchases.</string>
    <string name="billing_transaction_finished_ok">Transaction finished successfully. Your account balance will be increased</string>
    <string name="billing_transaction_finished">Transaction finished with state: %s</string>
    <string name="transaction_voucher_wrong">Transaction cancelled. Invalid voucher number.</string>
    <string name="transaction_voucher_used">Transaction cancelled. Used voucher number.</string>
    <string name="transaction_unknown">Transaction cancelled, unknown error. Please contact administrator.</string>
    <string name="transaction_canceled">Transaction cancelled.</string>
    <string name="date_today">Today</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_edit">Edit</string>
    <string name="button_details">Details</string>
    <string name="button_delete">Delete</string>
    <string name="button_send">Send</string>
    <string name="button_checkrate">Check</string>
    <string name="button_display">Display</string>
    <string name="button_close">Close</string>
    <string name="callmode_dialog_title">Select call mode</string>
    <string name="msg_account_state">Balance</string>
    <string name="msg_loading">Loading...\nPlease wait</string>
    <string name="settings_screen_video">Video</string>
    <string name="settings_screen_system">System settings</string>
    <string name="settings_screen_deactivate">Deactivate account</string>
    <string name="settings_deactivate_title">Deactivate account</string>
    <string name="settings_deactivate_msg">Are you sure you want to deactivate your account</string>
    <string name="error_deactivating">Error deactivating account</string>
    <string name="settings_key_video_front_camera">Use front camera</string>
    <string name="settings_key_video_front_camera_sum_on">Front camera will be used if available</string>
    <string name="settings_key_video_front_camera_sum_off">Main camera will be used</string>
    <string name="settings_key_video_tablet_fix">Video fix for tablet devices</string>
    <string name="settings_key_video_tablet_fix_summary">Enables fix for horizontally flipped outgoing video</string>
    <string name="settings_key_video_preview_horizontal_flip_fix">Fix for camera preview</string>
    <string name="settings_key_video_preview_horizontal_flip_fix_summary">Enables fix for horizontally flipped camera preview on some bugged devices</string>
    <string name="settings_key_video_bps">Bit rate</string>
    <string name="settings_key_video_res">Resolution</string>
    <string name="settings_key_video_fps">Frames per second</string>
    <string name="settings_key_video_recording">Recording</string>
    <string name="settings_key_ringtone">Phone ringtone</string>
    <string name="settings_key_ringtone_summary">Ringtone for incoming calls</string>
    <string name="settings_sms_key_ringtone">SMS ringtone</string>
    <string name="settings_sms_key_ringtone_summary">Ringtone for incoming messages</string>
    <string name="settings_key_keytones">Enable key tones</string>
    <string name="settings_key_keytones_summary">Enable/disable key tones in dialpad</string>
    <string name="settings_key_vibration">Enable key vibration</string>
    <string name="settings_key_vibration_summary">Enable/disable key vibration in dialpad</string>
    <string name="settings_key_bluetooth">Use bluetooth headset</string>
    <string name="settings_key_bluetooth_summary">Enable if you want to use bluetooth headset</string>
    <string name="settings_key_message_type">Message type</string>
    <string name="settings_key_service_auto_start">Auto start</string>
    <string name="settings_key_service_auto_start_summary">Starts VOIP service and registers when system starts</string>
    <string name="settings_key_native_calllog">Use Native Call Log</string>
    <string name="settings_key_native_calllog_summary">Logs calls in native call log if possible</string>
    <string name="settings_key_push_notifications">Push notifications</string>
    <string name="settings_key_push_notifications_summary">Enable/disable GCM push notifications while user is Offline</string>
    <string name="settings_key_pop_up_notifications">Pop up notifications</string>
    <string name="settings_key_pop_up_notifications_summary">Enable/disable pop up notifications window</string>
    <string name="settings_key_about">About</string>
    <string name="settings_key_version">Version</string>
    <string name="settings_key_website">Our website</string>
    <string name="settings_key_legal">Legal</string>
    <string name="registration_country_prompt">Please select your country</string>
    <string name="registration_terms">By signing in I do accept the following: </string>
    <string name="registration_terms_btn"><b><u>Terms and conditions</u></b></string>
    <string name="registration_acces_btn"><b><u>Access to the phone contacts</u></b></string>
    <string name="profile_first_name">First name</string>
    <string name="profile_last_name">Last name</string>
    <string name="profile_sex">Sex</string>
    <string name="profile_country">Country</string>
    <string name="profile_city">City</string>
    <string name="profile_birthday">Birthday</string>
    <string name="profile_not_set_hint">not set</string>
    <string name="more_my_profile_details">My profile Details</string>
    <string name="registration_we_will_call_you">Looks we have a problem with sending an SMS to your number. Prepare something to write down the code and click OK when ready. We will call you.</string>
    <string name="add_first_name_hint">set first name</string>
    <string name="add_last_name_hint">set last name</string>
    <string name="add_info">Please provide first name and last name</string>
    <string name="dids_details">Number details</string>
    <string name="buy_number">Buy number</string>
    <string name="dids_details_display_name">Display name:</string>
    <string name="did_details_share_my_number">Display my phone no. in contact search results</string>
    <string name="dialog_old_password">old password</string>
    <string name="dialog_new_password">new password</string>
    <string name="dialog_hint_enter_old">enter old password</string>
    <string name="dialog_hint_enter_pass">enter password</string>
    <string name="dialog_hint_confirm_pass">confirm password</string>
</resources>