<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <unique.packagename.widget.MainTextView
        android:id="@+id/dialog_base_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_we_will_call_you" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingTop="15dp" >

        <unique.packagename.widget.MainButton
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:text="@string/button_ok" />

        <unique.packagename.widget.MainButton
            android:id="@+id/button_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxWidth="100dp"
            android:minWidth="100dp"
            android:text="@string/button_no"
            android:visibility="visible" />
    </LinearLayout>

</LinearLayout>