<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
             >

            <LinearLayout
                android:id="@+id/set_password_old_password_section"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical"
                android:visibility="gone"
                android:layout_marginBottom="8dp" >

                <unique.packagename.widget.MainTextView
                    android:id="@+id/old_pass_tv"
                    style="@style/dialog_passwrod_textview"
                    android:text="@string/dialog_old_password" />

                <unique.packagename.widget.MainEditText
                    android:id="@+id/enter_old_password"
                    style="@style/custom_alert_dialog"
                    android:hint="@string/dialog_hint_enter_old"
                    android:inputType="textPassword"
                    />
            </LinearLayout>

            <unique.packagename.widget.MainTextView
                android:id="@+id/new_pass_tv"
                style="@style/dialog_passwrod_textview"
                android:text="@string/dialog_new_password"
                android:visibility="visible" />

            <unique.packagename.widget.MainEditText
                android:id="@+id/enter_password"
                style="@style/custom_alert_dialog"
                android:inputType="textPassword"
                android:hint="@string/dialog_hint_enter_pass" />

            <unique.packagename.widget.MainEditText 
                android:id="@+id/confirm_password"
                style="@style/custom_alert_dialog"
                android:inputType="textPassword"
                android:hint="@string/dialog_hint_confirm_pass" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/password_ok_ib"
            android:layout_width="@dimen/registration_icon_size"
            android:layout_height="@dimen/registration_icon_size"
            android:layout_gravity="bottom"
            android:background="@drawable/transparent_bg"
            android:scaleType="fitCenter"
            android:src="@drawable/btn_accept" />
    </LinearLayout>

    <unique.packagename.widget.MainTextView
        android:id="@+id/password_dialog_hint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="2dp"
        android:text=""
        android:textColor="@color/medium_grey" />

    <unique.packagename.widget.MainTextView
        android:textColor="@color/custom_alert_dialog_text_color"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:gravity="center"
        android:autoLink="web"
        android:textColorLink="@color/vippie_yellow"
        android:text="@string/password_dialog_footer" />

</LinearLayout>