<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/registration_terms_section"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical" >

    <unique.packagename.widget.MainTextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/registration_terms"
        android:textColor="@color/registration_terms_title"
        android:textSize="10sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="15dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="0dp"
        android:weightSum="21" >

        <unique.packagename.widget.MainButton
            android:id="@+id/registration_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="10"
            android:background="@color/transparent"
            android:textColor="@color/registration_terms"
            android:text="@string/registration_terms_btn"
            android:textSize="10sp" />

        <unique.packagename.widget.MainButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:textColor="@color/registration_terms"
            android:text="|"
            android:textSize="10sp" />

        <unique.packagename.widget.MainButton
            android:id="@+id/registration_privacy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:layout_weight="10"
            android:background="@color/transparent"
            android:clickable="false"
            android:textColor="@color/registration_terms"
            android:text="@string/registration_acces_btn"
            android:textSize="10sp" />
    </LinearLayout>

</LinearLayout>